Fix: mailing list form off screen overflow

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -209,6 +209,7 @@ img.medium {
   display: flex;
   width: 100%;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 10px;
   margin: 0;
   padding: 0;
